--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ if (!empty($_POST)) {
       $errors[] = 'Pesan Harus diisi!';
   }
 } ?>		
-		<form action="index.php" method="post" class="custom-form contact-form" role="form"> 
+		<form action="index.html" method="post" class="custom-form contact-form" role="form"> 
 		<div class="row"> <div class="col-lg-6 col-md-6 col-12"> <div class="form-floating"> 
 		<input type="text" name="name" id="name" class="form-control" placeholder="Name" required=""> 
 		<label for="floatingInput">Nama</label> </div> </div> <div class="col-lg-6 col-md-6 col-12"> 
