--- a/index.html
+++ b/index.html
@@ -1,54 +1,3 @@
-<?php
-$errors = [];
-
-if ($_SERVER["REQUEST_METHOD"] == "POST") {
-    // Get POST data
-    $name = isset($_POST['name']) ? strip_tags(trim($_POST['name'])) : '';
-    $email = isset($_POST['email']) ? trim($_POST['email']) : '';
-    $message = isset($_POST['message']) ? strip_tags(trim($_POST['message'])) : '';
-
-    // Validate form fields
-    if (empty($name)) {
-        $errors[] = 'Name is empty';
-    }
-
-    if (empty($email)) {
-        $errors[] = 'Email is empty';
-    } else if (!filter_var($email, FILTER_VALIDATE_EMAIL)) {
-        $errors[] = 'Email is invalid';
-    }
-
-    if (empty($message)) {
-        $errors[] = 'Message is empty';
-    }
-
-    // If no errors, send email
-    if (empty($errors)) {
-        // Recipient email address (replace with your own)
-        $recipient = "recipient@example.com";
-
-        // Additional headers
-        $headers = "From: $name <$email>";
-
-        // Send email
-        if (mail($recipient, $message, $headers)) {
-            echo "Email sent successfully!";
-        } else {
-            echo "Failed to send email. Please try again later.";
-        }
-    } else {
-        // Display errors
-        echo "The form contains the following errors:<br>";
-        foreach ($errors as $error) {
-            echo "- $error<br>";
-        }
-    }
-} else {
-    // Not a POST request, display a 403 forbidden error
-    header("HTTP/1.1 403 Forbidden");
-    echo "You are not allowed to access this page.";
-}
-?>
      <!doctype html>
     <html lang="id">
         <head>
@@ -230,7 +179,7 @@ if (!empty($_POST)) {
       $errors[] = 'Pesan Harus diisi!';
   }
 } ?>		
-		<form action="index.html" method="post" class="custom-form contact-form" role="form"> 
+		<form action="mail.php" method="post" class="custom-form contact-form" role="form"> 
 		<div class="row"> <div class="col-lg-6 col-md-6 col-12"> <div class="form-floating"> 
 		<input type="text" name="name" id="name" class="form-control" placeholder="Name" required=""> 
 		<label for="floatingInput">Nama</label> </div> </div> <div class="col-lg-6 col-md-6 col-12"> 
