--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
 	
 		<form action="mail.php" method="post" class="custom-form contact-form" role="form"> 
 		<div class="row"> <div class="col-lg-6 col-md-6 col-12"> <div class="form-floating"> 
-		<input type="text" name="name" id="name" class="form-control" placeholder="Name" required=""> 
+		<input type="text" name="nama" id="nama" class="form-control" placeholder="Name" required=""> 
 		<label for="floatingInput">Nama</label> </div> </div> <div class="col-lg-6 col-md-6 col-12"> 
 		<div class="form-floating"> <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Email address" required=""> 
 		<label for="floatingInput">Email address</label> </div> </div> 
  
 		<div class="col-lg-12 col-12"> 
 		<div class="form-floating"> 
-		<textarea class="form-control" id="message" name="message" placeholder="Tell me about the project"></textarea> 
+		<textarea class="form-control" id="pesan" name="pesan" placeholder="Tell me about the project"></textarea> 
 		<label for="floatingTextarea">Beritahu saya terkait kebutuhan anda.</label> </div> </div> <div class="col-lg-3 col-12 ms-auto"> 
 		<button type="submit" value="send" class="form-control">Kirim</button> </div> </div> </form> </div> </div> </div> </section> </main> 
 		<footer class="site-footer"> <div class="container"> <div class="row"> <div class="col-lg-12 col-12"> <div class="copyright-text-wrap"> 
